fix: result card unit alignment

--- a/src/components/common/Result/ResultCard.module.css
+++ b/src/components/common/Result/ResultCard.module.css
@@ -49,7 +49,6 @@
   font-weight: normal;
   color: var(--color-gray-7);
   margin-left: 4px;
-  margin-top: 20px;
 }
 
 @media screen and (max-width: 662px) {
